--- a/templates/login.html
+++ b/templates/login.html
@@ -264,7 +264,7 @@ footer a {
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="{% url 'home' %}">
+		<form action="{% url 'index' %}">
 			<h1>Sign in</h1>
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
