--- a/portfolio/templates/account-profile.html
+++ b/portfolio/templates/account-profile.html
@@ -187,6 +187,17 @@
                                     download setupfile
                                 </a>
                             </div>
+                            <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="nav-link-icon"><i data-feather="layout"></i></div>
+                                django
+                                <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div class="collapse" id="collapseLayouts" data-bs-parent="#accordionSidenav">
+                                <a class="nav-link" href="/admin">
+                                    <div class="nav-link-icon"><img src="/static/cmd.png" height="30px"></i></div>
+                                    admin
+                                </a>
+                            </div>
                             <!-- Sidenav Heading (Addons)-->
                             <div class="sidenav-menu-heading">Plugins</div>
                             <!-- Sidenav Link (Charts)-->
