--- a/templates/add-profile.html
+++ b/templates/add-profile.html
@@ -109,7 +109,7 @@
                             <div class="dropdown-item-icon"><i data-feather="settings"></i></div>
                             Account
                         </a>
-                        <a class="dropdown-item" href="/login">
+                        <a class="dropdown-item" href="/">
                             <div class="dropdown-item-icon"><i data-feather="log-out"></i></div>
                             Logout
                         </a>
@@ -154,19 +154,31 @@
                                     <div class="nav-link-icon"><img src="/static/cmd.png" height="30px"></i></div>
                                     Web Terminal
                                 </a>
+                                <a class="nav-link" href="">
+                                    <div class="nav-link-icon"><img src="/static/profile.jpeg" height="30px"></i></div>
+                                    profile
+                                </a>
                                 <a class="nav-link" href="/git">
                                     <div class="nav-link-icon"><img src="/static/git.png" height="30px"></i></div>
                                     git repo
+                                </a>
+                                <a class="nav-link" href="/project">
+                                    <div class="nav-link-icon"><img src="static/folder.jpeg" height="30px"></i></div>
+                                    projects
                                 </a>
                             </div>
                             <!-- Sidenav Accordion (Flows)-->
                             <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#collapseFlows" aria-expanded="false" aria-controls="collapseFlows">
                                 <div class="nav-link-icon"><i data-feather="repeat"></i></div>
-                                Flows
+                                author
                                 <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseFlows" data-bs-parent="#accordionSidenav">
                                 <nav class="sidenav-menu-nested nav">
+                                    <a class="nav-link" href="/register">
+                                        <div class="nav-link-icon"><img src="/static/new_user.png" height="30px"></i></div>
+                                        register
+                                    </a>
                                 </nav>
                             </div>
                             <!-- Sidenav Heading (UI Toolkit)-->
@@ -181,6 +193,17 @@
                                 <a class="nav-link" href="/static/setup.py" download>
                                     <div class="nav-link-icon"><img src="/static/cmd.png" height="30px"></i></div>
                                     download setupfile
+                                </a>
+                            </div>
+                            <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="nav-link-icon"><i data-feather="layout"></i></div>
+                                django
+                                <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div class="collapse" id="collapseLayouts" data-bs-parent="#accordionSidenav">
+                                <a class="nav-link" href="/admin">
+                                    <div class="nav-link-icon"><img src="/static/cmd.png" height="30px"></i></div>
+                                    admin
                                 </a>
                             </div>
                             <!-- Sidenav Heading (Addons)-->
@@ -239,7 +262,7 @@
                     <div class="container-xl px-4 mt-4">
                         <!-- Account page navigation-->
                         <nav class="nav nav-borders">
-                            <a class="nav-link active ms-0" href="account-profile.html">Profile</a>
+                            <a class="nav-link active ms-0" href="/profile/account-profile.html">Profile</a>
                         </nav>
                         <hr class="mt-0 mb-4" />
                         <div class="row">
@@ -255,15 +278,16 @@
                             <div class="col-xl-8">
                                 <!-- Account details card-->
                                 <div class="card mb-4">
-                                    <div class="card-header">Account Details</div>
                                     <div class="card-body">
+                                        <div class="form-group">
                                         <form  method="POST">
                                             {% csrf_token %}
                                             {{ form.as_table }}
                                         
                                         </table>
                                         
-                                        <button>Create</button>
+                                        <button class="btn btn-secondary">Create</button>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
