--- a/portfolio/templates/account-profile.html
+++ b/portfolio/templates/account-profile.html
@@ -198,6 +198,11 @@
                                     admin
                                 </a>
                             </div>
+
+                            <a class="nav-link" href="/blog">
+                                <div class="nav-link-icon"><img src="static/blog.png" height="30px"></i></div>
+                                blog
+                            </a>
                             <!-- Sidenav Heading (Addons)-->
                             <div class="sidenav-menu-heading">Plugins</div>
                             <!-- Sidenav Link (Charts)-->
